--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         </style>
     
 </body> 
+
+
 <!-- </html> <h1>  Introduction</h1> 
 <h2>Spells </h2> 
 <ul> 
@@ -63,11 +65,16 @@
 <p class="side">
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio totam illum blanditiis fugiat consectetur corporis nulla impedit debitis! Eaque soluta dolores in molestias natus! Praesentium cum officiis ratione quibusdam architecto!
 </p> -->
-
-<h1>
+<!-- <h1>
     <P class="name">FTDalekTroyd</P>
    <p> <img class ="big1" src="FTDalekTroyd.jpg" alt="">  
     <p class="inf">
 FTDalekTroyd is a YouTuber and Twitch streamer who plays a variaty of games but mostly Minecraft
     </p>
-</h1>
+</h1> -->
+<!-- <h1> WANTED </h1>
+<h2>Dead or alive</h2>
+
+<h3 class="monny">20,000</h3> -->
+<p id="hi"> hi</p>
+
