--- a/index.html
+++ b/index.html
@@ -13,52 +13,15 @@
         </style>
     
 </body> 
-<<<<<<< Updated upstream
-</html> <h1>  Introduction</h1>
-<h2>Spells </h2> 
-<ul> 
-    <li>ice</li>
-    <li>Water</li>
-    <li>Fire ball</li>
-</ul>
-<h2>Party</h2>
-<ul>
-    <li>Dark elf</li>
-    <li>Inchling</li>
-    <li>Human</li>
-    <li>dwarf</li>
-</ul>
-<H2>plans</H2>
-<ol> 
-    <li>get ritch</li>
-    <li>Kill everything</li>
-    <li>seduce the dragon</li> 
-</ol>
-<p><b>  hellp</b> world</p>
-<h2>Items </h2>
-<table>
-    <tr> 
-        <th>Items</th>
-        <th> wepons</th>
-        <th>misc</th>
-    </tr>
-   <tr>
-    <td> bage of holding</td>
-     <td>Iron sowrd</td>
-    <td></td>
-   </tr>
 
-   <tr>
-   
-   </tr>
 
-</table>
 
-=======
 
-<h1> Hello</h1>
-<h2>Welcome to my web page</h2>
-<a href="https://linktr.ee/FTDalekTroyd" ><input type="button" value="enter"></a>
-<p></p>
-<a class="link" href="https://linktr.ee/FTDalekTroyd"> Hi </a>
->>>>>>> Stashed changes
+
+<h1> Welcome to my web page</h1>
+<h2>This is a blog site about my game[redacted]</h2>
+<p>[redacted] Is a game set in a distopion solar punk world <br> The premus of the game is learning what happend to everyone after a machine war though puzzels and level design</p>
+
+<a href="https://linktr.ee/FTDalekTroyd" ><input type="button" value="Links"></a>
+
+
