--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1> Welcome to my web page</h1>
 <h2>This is a blog site about my game[redacted]</h2>
 <p>[redacted] Is a game set in a distopion solar punk world <br> The premus of the game is learning what happend to everyone after a machine war though puzzels and level design</p>
-
-<a href="https://linktr.ee/FTDalekTroyd" ><input type="button" value="Links"></a>
+<a href="about.html"><button class="button about" >about</a><br>
+<a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
 
 
