--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 
 
 <h1> Welcome to my web page</h1>
-<h2>This is a blog site about my game[redacted]</h2>
-<p>[redacted] Is a game set in a distopion solar punk world <br> The premus of the game is learning what happend to everyone after a machine war though puzzels and level design</p>
+<h2>
+    This is a blog site about my game Solar Fall
+    <br>
+    Please use the buttons to see more information about my game
+</h2>
+
+
 <a href="about.html"><button class="button about" >about</a><br>
 <a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
 
