--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
     <br>
     Please use the buttons to see more information about my game
 </h2>
+<h3>About my game</h3>
+<p>
+    Solar Fall Is a game set in a distopion solar punk world
+    <br>
+    The premus of the game is learning what happend to everyone after a machine war though puzzels and level design
+</p>
 
-
-<a href="about.html"><button class="button about" >about</a><br>
+<a href="pages/about.html"><button class="button about" >About</a>
+<br>
+<a href="pages/blog.html"><button class="button Blog">Blog </a>
+<br>
 <a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
 
 
