--- a/pages/about.html
+++ b/pages/about.html
@@ -7,12 +7,17 @@
      <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+<div class="Buttons">
+<a href="../index.html"><button class="button about" >Home</a>
+<br>
+<a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
+</div>
+
+<p class="FTDT">
+Hello I am FTDalekTroyd and I do Live steams on Twitch and upload videos on YouTube
+<br>
+I have been making games since 2024 and have 1 game you can find it on Itch.io [Kitsune Dash{beta}]
+</p>
 </body>
 </html>
-<p class="FTDT">Hello I am FTDalekTroyd and I do Live steams on Twitch and upload videos on YouTube
-    <br>
-    I have been making games since 2024 and have 1 game you can find it on Itch.io [Kitsune Dash{beta}]
-</p>
-<a href="../index.html"><button class="button about" >Home page</a> <br>
-<a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
+
