--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,12 +7,23 @@
       <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
-</body>
-</html>
+
+<div class="Buttons">
+<a href="../index.html"><button class="button about" >Home</a>
+<br>
+<a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
+</div>
+
 <h1 class="blog"> Welcome to the blog </h1>
 <h2>The games beginnings</h2>
-<div class="DTI"><img id="DTI" src="../css/images/Screenshot 2025-12-03 143944.png" alt=""></div>
-<p class="DTB">Delta Tango 2329's body</p>
-<a href="../index.html"><button class="button about" >Home page</a><br>
-<a href="https://linktr.ee/FTDalekTroyd" ><button class="button Links" >Links</a>
+<div class="DTI"><img id="DTI" src="../css/images/Screenshot 2025-12-03 143944.png" alt="">
+</div>
+
+<p class="DTB">
+Delta Tango 2329's body made on the 27/11/25
+</p>
+
+</body>
+</html>
+
+
