--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FTDalekTroyd games</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="css/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     
